[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/StartScreen.gd" type="Script" id=1]
[ext_resource path="res://Fonts/neuropol/NEUROPOL.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Art/titleexit2.png" type="Texture" id=3]
[ext_resource path="res://Art/titlestart2.png" type="Texture" id=4]
[ext_resource path="res://Art/titlestart1.png" type="Texture" id=5]
[ext_resource path="res://Art/titlecredits2.png" type="Texture" id=6]
[ext_resource path="res://Art/titlecredits1.png" type="Texture" id=7]
[ext_resource path="res://Art/titlesettings2.png" type="Texture" id=8]
[ext_resource path="res://Art/titlesettings1.png" type="Texture" id=9]
[ext_resource path="res://Art/titleexit1.png" type="Texture" id=10]
[ext_resource path="res://Art/blanktitle.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 58
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 48
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 11 )
expand = true

[node name="Title Screen" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Start" type="TextureButton" parent="Title Screen"]
anchor_left = 36.0
anchor_top = 18.8
anchor_right = 45.2
anchor_bottom = 24.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Credits" type="TextureButton" parent="Title Screen"]
margin_left = 480.0
margin_top = 832.0
margin_right = 672.0
margin_bottom = 928.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
expand = true

[node name="Settings" type="TextureButton" parent="Title Screen"]
margin_left = 112.0
margin_top = 648.0
margin_right = 200.0
margin_bottom = 691.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )

[node name="Exit" type="TextureButton" parent="Title Screen"]
margin_left = 1784.0
margin_top = 8.0
margin_right = 1912.0
margin_bottom = 72.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
expand = true

[node name="Settings" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Master Slider" type="HSlider" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -84.0
margin_right = 200.0
margin_bottom = -36.0
max_value = 1.0
step = 0.1
value = 1.0

[node name="Music SLider" type="HSlider" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -28.0
margin_right = 200.0
margin_bottom = -12.0
max_value = 1.0
step = 0.1
value = 1.0

[node name="SFX Slider" type="HSlider" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = 12.0
margin_right = 200.0
margin_bottom = 28.0
max_value = 1.0
step = 0.1
value = 1.0

[node name="Master Label" type="Label" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -100.0
margin_right = -46.0
margin_bottom = -39.0
custom_fonts/font = SubResource( 1 )
text = "Master"
align = 1
valign = 1

[node name="Music Label" type="Label" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -44.0
margin_right = -112.0
margin_bottom = 6.0
custom_fonts/font = SubResource( 2 )
text = "Music"
align = 1
valign = 1

[node name="SFX Label" type="Label" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = 4.0
margin_right = -167.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 3 )
text = "SFX"
align = 1
valign = 1

[node name="Back" type="Button" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 100.0
margin_bottom = 164.0
custom_fonts/font = SubResource( 4 )
text = "Back"

[node name="Credits" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -108.0
margin_right = 90.0
margin_bottom = -36.0
custom_fonts/font = SubResource( 5 )
text = "Credits"
align = 1
valign = 1

[node name="Programming" type="Label" parent="Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -12.0
margin_right = 50.0
margin_bottom = 5.0
custom_fonts/font = SubResource( 6 )
text = "Programming"

[node name="Trevor Tomlin" type="Label" parent="Credits/Programming"]
margin_top = 24.0
margin_right = 111.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 6 )
text = "Trevor Tomlin"

[node name="Music" type="Label" parent="Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 116.0
margin_right = 21.0
margin_bottom = 133.0
custom_fonts/font = SubResource( 6 )
text = "Music"

[node name="Ryan Macumber 2" type="Label" parent="Credits/Music"]
margin_top = 24.0
margin_right = 148.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 6 )
text = "Ryan Macumber"

[node name="Art" type="Label" parent="Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 52.0
margin_right = 21.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 6 )
text = "Art"

[node name="Ryan Macumber" type="Label" parent="Credits/Art"]
margin_top = 24.0
margin_right = 148.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 6 )
text = "Ryan Macumber"

[node name="Back2" type="Button" parent="Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = 204.0
margin_right = 64.0
margin_bottom = 224.0
text = "Back"

[connection signal="pressed" from="Title Screen/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Title Screen/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Title Screen/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Title Screen/Exit" to="." method="_on_Exit_pressed"]
[connection signal="value_changed" from="Settings/Master Slider" to="." method="_on_Master_Slider_value_changed"]
[connection signal="value_changed" from="Settings/Music SLider" to="." method="_on_Music_SLider_value_changed"]
[connection signal="value_changed" from="Settings/SFX Slider" to="." method="_on_SFX_Slider_value_changed"]
[connection signal="pressed" from="Settings/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Credits/Back2" to="." method="_on_Back2_pressed"]
